--- a/EjerciciosHtml/Ejercicios/Views/Home/Index.cshtml
+++ b/EjerciciosHtml/Ejercicios/Views/Home/Index.cshtml
@@ -16,6 +16,9 @@
         <li>
             <a href="/Home/Ejercicio1">Ejercico 1</a>
         </li>
+        <li>
+            <a href="/Home/Ejercicio2">Ejercico 2</a>
+        </li>
     </ul>
 </body>
 </html>
