--- a/EjerciciosHtml/Ejercicios/Views/Home/Index.cshtml
+++ b/EjerciciosHtml/Ejercicios/Views/Home/Index.cshtml
@@ -19,6 +19,9 @@
         <li>
             <a href="/Home/Ejercicio2">Ejercico 2</a>
         </li>
+        <li>
+            <a href="/Home/EjercicioEnlaces">Ejercico Enlaces</a>
+        </li>
     </ul>
 </body>
 </html>
