--- a/EjerciciosHtml/Ejercicios/Views/Home/Index.cshtml
+++ b/EjerciciosHtml/Ejercicios/Views/Home/Index.cshtml
@@ -20,6 +20,9 @@
             <a href="/Home/Ejercicio2">Ejercico 2</a>
         </li>
         <li>
+            <a href="/Home/Ejercicio3">Ejercico 3</a>
+        </li>
+        <li>
             <a href="/Home/EjercicioEnlaces">Ejercico Enlaces</a>
         </li>
     </ul>
